Fix home page title size on mobile

--- a/src/assets/style/pages/_home-page.scss
+++ b/src/assets/style/pages/_home-page.scss
@@ -66,7 +66,7 @@
           }
 
           @include for-small-layout {
-            font-size: em(28px);
+            font-size: em(26px);
           }
 
           .logo {
